#2 Created a env.properties to store env variables

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,9 +1,11 @@
+spring.config.import=env.properties
+
 #Connect to database
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/checklistDB
-spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.url=jdbc:postgresql:${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 
 #Connect JPA
