--- a/api/.gitignore
+++ b/api/.gitignore
@@ -5,6 +5,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### ENV VARIABLES ###
+/src/main/resources/env.properties
+
 ### STS ###
 .apt_generated
 .classpath
