--- a/system/login-api/package.json
+++ b/system/login-api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
